--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="CarRentApp.MainWindow"
+<Window x:Class="CarRentApp.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CarRentApp"
         mc:Ignorable="d"
-        Title="Car Rent Management" Height="500" Width="800">
-    <Grid Margin="10">
-
+        Title="Car Rent Login" Height="400" Width="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+    <Grid>
+        <TextBlock Text="Login" HorizontalAlignment="Center"/>
     </Grid>
 </Window>
