--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -3,10 +3,33 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarRentApp"
         mc:Ignorable="d"
-        Title="Car Rent Login" Height="400" Width="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Title="Login" Height="500" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Background="#F3F4F6">
     <Grid>
-        <TextBlock Text="Login" HorizontalAlignment="Center"/>
+        <!-- Central Content -->
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+
+            <TextBlock Text="Login" 
+                       FontSize="28" 
+                       FontWeight="Bold" 
+                       Foreground="#333" 
+                       HorizontalAlignment="Center" 
+                       Margin="0,0,0,20" />
+
+            <TextBlock Text="Do not have an account?" 
+                       FontSize="14" 
+                       Foreground="#555" 
+                       HorizontalAlignment="Center" 
+                       Margin="0,10,0,5"/>
+
+            <TextBlock Text="Register here" 
+                       FontSize="14" 
+                       Foreground="#0078D7" 
+                       HorizontalAlignment="Center" 
+                       Cursor="Hand" 
+                       TextDecorations="Underline"
+                       MouseLeftButtonUp="RegisterHere_Click" />
+        </StackPanel>
     </Grid>
 </Window>
