--- a/Views/RegisterView.xaml
+++ b/Views/RegisterView.xaml
@@ -1,35 +1,28 @@
-<Window x:Class="CarRentApp.Views.LoginWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Login" Height="500" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Background="#F3F4F6">
+<UserControl x:Class="CarRentApp.Views.RegisterView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
-        <!-- Central Content -->
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
-
-            <TextBlock Text="Login" 
+            <TextBlock Text="Register" 
                        FontSize="28" 
                        FontWeight="Bold" 
                        Foreground="#333" 
                        HorizontalAlignment="Center" 
                        Margin="0,0,0,20" />
 
-            <TextBlock Text="Do not have an account?" 
+            <TextBlock Text="Already have an account?" 
                        FontSize="14" 
                        Foreground="#555" 
                        HorizontalAlignment="Center" 
                        Margin="0,10,0,5"/>
 
-            <TextBlock Text="Register here" 
+            <TextBlock Text="Back to Login" 
                        FontSize="14" 
                        Foreground="#0078D7" 
                        HorizontalAlignment="Center" 
                        Cursor="Hand" 
                        TextDecorations="Underline"
-                       MouseLeftButtonUp="RegisterHere_Click" />
+                       MouseLeftButtonUp="SwitchToLoginView" />
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
