--- a/Views/Login/LoginView.xaml
+++ b/Views/Login/LoginView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CarRentApp.Views.LoginView"
+<UserControl x:Class="CarRentApp.Views.Login.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
