--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CarRentApp.Views.RegisterView"
+<UserControl x:Class="CarRentApp.Views.Register.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
