--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -1,28 +1,87 @@
 <UserControl x:Class="CarRentApp.Views.Register.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
-            <TextBlock Text="Register" 
-                       FontSize="28" 
-                       FontWeight="Bold" 
-                       Foreground="#333" 
-                       HorizontalAlignment="Center" 
-                       Margin="0,0,0,20" />
+	<Grid>
+		<!-- Central content layout using StackPanel -->
+		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Margin="0,20">
 
-            <TextBlock Text="Already have an account?" 
-                       FontSize="14" 
-                       Foreground="#555" 
-                       HorizontalAlignment="Center" 
-                       Margin="0,10,0,5"/>
+			<!-- Header -->
+			<TextBlock Text="Register"
+                        FontSize="28"
+                        FontWeight="Bold"
+                        Foreground="#333"
+                        HorizontalAlignment="Center"
+                        Margin="0,0,0,20" />
 
-            <TextBlock Text="Back to Login" 
-                       FontSize="14" 
-                       Foreground="#0078D7" 
-                       HorizontalAlignment="Center" 
-                       Cursor="Hand" 
-                       TextDecorations="Underline"
-                       MouseLeftButtonUp="SwitchToLoginView" />
-        </StackPanel>
-    </Grid>
+			<!-- First Name Field -->
+			<TextBlock Text="First Name"
+                        FontSize="14"
+                        Foreground="#555"
+                        Margin="0,5,0,0"/>
+			<TextBox x:Name="FirstNameTextBox"
+                        Height="30"
+                        BorderBrush="#0078D7"
+                        BorderThickness="1"
+                        Padding="5" />
+
+			<!-- Last Name Field -->
+			<TextBlock Text="Last Name"
+                        FontSize="14"
+                        Foreground="#555"
+                        Margin="0,10,0,0"/>
+			<TextBox x:Name="LastNameTextBox"
+                        Height="30"
+                        BorderBrush="#0078D7"
+                        BorderThickness="1"
+                        Padding="5" />
+
+			<!-- E-mail Field -->
+			<TextBlock Text="E-mail"
+                        FontSize="14"
+                        Foreground="#555"
+                        Margin="0,10,0,0"/>
+			<TextBox x:Name="EmailTextBox"
+                        Height="30"
+                        BorderBrush="#0078D7"
+                        BorderThickness="1"
+                        Padding="5" />
+
+			<!-- Password Field -->
+			<TextBlock Text="Password"
+                        FontSize="14"
+                        Foreground="#555"
+                        Margin="0,10,0,0"/>
+			<PasswordBox x:Name="PasswordBox"
+                            Height="30"
+                            BorderBrush="#0078D7"
+                            BorderThickness="1"
+                            Padding="5" />
+
+			<!-- Register Button -->
+			<Button Content="Sign up"
+                    Height="40"
+					Width="200"
+                    Margin="0,20,0,0"
+                    Background="#0078D7"
+                    Foreground="White"
+                    FontWeight="Bold"
+                    BorderThickness="0"
+                    HorizontalAlignment="Center"/>
+			
+			<!-- Back to Login Section -->
+			<TextBlock Text="Already have an account?"
+                        FontSize="14"
+                        Foreground="#555"
+                        HorizontalAlignment="Center"
+                        Margin="0,20,0,5"/>
+
+			<TextBlock Text="Back to Login"
+                        FontSize="14"
+                        Foreground="#0078D7"
+                        HorizontalAlignment="Center"
+                        Cursor="Hand"
+                        TextDecorations="Underline"
+                        MouseLeftButtonUp="SwitchToLoginView" />
+		</StackPanel>
+	</Grid>
 </UserControl>
