--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -2,7 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Grid>
-		<!-- Central content layout using StackPanel -->
 		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Margin="0,20">
 
 			<!-- Header -->
@@ -15,25 +14,25 @@
 
 			<!-- First Name Field -->
 			<TextBlock Text="First Name"
-                        FontSize="14"
-                        Foreground="#555"
-                        Margin="0,5,0,0"/>
+					   FontSize="14"
+					   Foreground="#555"
+					   Margin="0,5,0,0"/>
 			<TextBox x:Name="FirstNameTextBox"
-                        Height="30"
-                        BorderBrush="#0078D7"
-                        BorderThickness="1"
-                        Padding="5" />
+					 Height="30"
+					 BorderBrush="#0078D7"
+					 BorderThickness="1"
+					 Padding="5" />
 
 			<!-- Last Name Field -->
 			<TextBlock Text="Last Name"
-                        FontSize="14"
-                        Foreground="#555"
-                        Margin="0,10,0,0"/>
+					   FontSize="14"
+					   Foreground="#555"
+					   Margin="0,10,0,0"/>
 			<TextBox x:Name="LastNameTextBox"
-                        Height="30"
-                        BorderBrush="#0078D7"
-                        BorderThickness="1"
-                        Padding="5" />
+					 Height="30"
+					 BorderBrush="#0078D7"
+					 BorderThickness="1"
+					 Padding="5" />
 
 			<!-- E-mail Field -->
 			<TextBlock Text="E-mail"
@@ -60,14 +59,15 @@
 			<!-- Register Button -->
 			<Button Content="Sign up"
                     Height="40"
-					Width="200"
+                    Width="200"
                     Margin="0,20,0,0"
                     Background="#0078D7"
                     Foreground="White"
                     FontWeight="Bold"
                     BorderThickness="0"
-                    HorizontalAlignment="Center"/>
-			
+                    HorizontalAlignment="Center"
+                    Click="SignUp_Click"/>
+
 			<!-- Back to Login Section -->
 			<TextBlock Text="Already have an account?"
                         FontSize="14"
