--- a/Views/Login/LoginView.xaml
+++ b/Views/Login/LoginView.xaml
@@ -44,7 +44,8 @@
                     Foreground="White"
                     FontWeight="Bold"
                     BorderThickness="0"
-                    HorizontalAlignment="Center"/>
+                    HorizontalAlignment="Center"
+					Click="SignIn_Click"/>
 
 			<!-- Navigation to Register -->
 			<TextBlock Text="Do not have an account?"
