--- a/Views/Login/LoginView.xaml
+++ b/Views/Login/LoginView.xaml
@@ -45,7 +45,7 @@
                     FontWeight="Bold"
                     BorderThickness="0"
                     HorizontalAlignment="Center"
-					Click="SignIn_Click"/>
+					Click="Login_Click"/>
 
 			<!-- Navigation to Register -->
 			<TextBlock Text="Do not have an account?"
