--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -66,7 +66,7 @@
                     FontWeight="Bold"
                     BorderThickness="0"
                     HorizontalAlignment="Center"
-                    Click="SignUp_Click"/>
+                    Click="Register_Click"/>
 
 			<!-- Back to Login Section -->
 			<TextBlock Text="Already have an account?"
