--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:CarRentApp.Views"
-        Title="Car Rent App" Height="500" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
+        Title="Car Rent App" Width="1200" Height="800" WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
         Background="#F3F4F6">
     <Grid>
         <ContentControl x:Name="MainContent" />
