--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -1,44 +1,79 @@
 <UserControl x:Class="CarRentApp.Views.Employee.EmployeeView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
-            <!-- Panel Title -->
-            <TextBlock Text="Employee Panel"
-                       FontSize="28"
+	<Grid Background="#F3F4F6">
+		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+
+			<!-- Panel Title -->
+			<TextBlock Text="Employee Panel"
+                       FontSize="32"
                        FontWeight="Bold"
                        Foreground="#333"
                        HorizontalAlignment="Center"
                        Margin="0,0,0,20" />
 
-            <!-- Welcome Message -->
-            <TextBlock x:Name="UserInfoTextBlock"
-                       FontSize="16"
+			<!-- User Info -->
+			<TextBlock x:Name="UserInfoTextBlock"
+                       FontSize="18"
                        Foreground="#555"
                        HorizontalAlignment="Center"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"
-                       Margin="0,10,0,10"/>
+                       Margin="0,0,0,20" />
 
-            <!-- Dashboard Info -->
-            <TextBlock Text="Welcome to the Employee Dashboard!"
-                       FontSize="14"
-                       Foreground="#555"
-                       HorizontalAlignment="Center"
-                       TextWrapping="Wrap"
-                       TextAlignment="Center"
-                       Margin="0,10,0,20"/>
+			<!-- Tab Control -->
+			<TabControl Width="700" Height="450">
+				<!-- Cars Tab -->
+				<TabItem Header="Cars">
+					<Grid Background="White" Margin="5">
+						<StackPanel Margin="10">
+							<!-- Form to Add Car -->
+							<TextBlock Text="Add New Car" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+							<StackPanel Orientation="Horizontal" Margin="0,5">
+								<TextBlock Text="Make:" Width="100" VerticalAlignment="Center"/>
+								<TextBox x:Name="MakeTextBox" Width="300" />
+							</StackPanel>
+							<StackPanel Orientation="Horizontal" Margin="0,5">
+								<TextBlock Text="Model:" Width="100" VerticalAlignment="Center"/>
+								<TextBox x:Name="ModelTextBox" Width="300" />
+							</StackPanel>
+							<StackPanel Orientation="Horizontal" Margin="0,5">
+								<TextBlock Text="Year:" Width="100" VerticalAlignment="Center"/>
+								<TextBox x:Name="YearTextBox" Width="300" />
+							</StackPanel>
+							<StackPanel Orientation="Horizontal" Margin="0,5">
+								<TextBlock Text="Horse Power:" Width="100" VerticalAlignment="Center"/>
+								<TextBox x:Name="HorsePowerTextBox" Width="300" />
+							</StackPanel>
+							<Button Content="Add Car" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
+                                    Click="AddCar_Click"/>
 
-            <!-- Logout Button -->
-            <Button Content="Logout"
+							<!-- Car List -->
+							<TextBlock Text="Car List" FontSize="20" FontWeight="Bold" Margin="0,20,0,10"/>
+							<DataGrid x:Name="CarDataGrid" AutoGenerateColumns="True" Height="250" />
+						</StackPanel>
+					</Grid>
+				</TabItem>
+
+				<!-- Requests Tab -->
+				<TabItem Header="Requests">
+					<Grid Background="White">
+						<TextBlock Text="Requests functionality not implemented yet."
+                                   HorizontalAlignment="Center" VerticalAlignment="Center"
+                                   FontSize="16" FontWeight="Bold"/>
+					</Grid>
+				</TabItem>
+			</TabControl>
+
+			<!-- Logout Button -->
+			<Button Content="Logout"
                     Height="40"
                     Width="200"
                     Background="#0078D7"
                     Foreground="White"
                     FontWeight="Bold"
                     BorderThickness="0"
-                    Click="Logout_Click"
-                    HorizontalAlignment="Center"/>
-        </StackPanel>
-    </Grid>
+                    Margin="20,20,0,0"
+                    HorizontalAlignment="Center"
+                    Click="Logout_Click"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
