--- a/Views/Login/LoginView.xaml
+++ b/Views/Login/LoginView.xaml
@@ -1,9 +1,8 @@
 <UserControl x:Class="CarRentApp.Views.Login.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid>
-		<!-- Central content layout using StackPanel -->
-		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+	<Grid Background="#F3F4F6">
+		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
 			<!-- Title -->
 			<TextBlock Text="Login"
