--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -1,8 +1,8 @@
 <UserControl x:Class="CarRentApp.Views.Register.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Grid>
-		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Margin="0,20">
+	<Grid Background="#F3F4F6">
+		<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
 
 			<!-- Header -->
 			<TextBlock Text="Register"
