--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -43,6 +43,11 @@
 								<TextBlock Text="Horse Power:" Width="100" VerticalAlignment="Center"/>
 								<TextBox x:Name="HorsePowerTextBox" Width="300" />
 							</StackPanel>
+							<StackPanel Orientation="Horizontal" Margin="0,5">
+								<TextBlock Text="Car State:" Width="100" VerticalAlignment="Center"/>
+								<ComboBox x:Name="CarStateComboBox" Width="300" SelectedIndex="0" />
+							</StackPanel>
+
 							<Button Content="Add Car" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
                                     Click="AddCar_Click"/>
 
