--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -51,13 +51,22 @@
 							<Button Content="Add Car" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
                                     Click="AddCar_Click"/>
 
-							<!-- Car List -->							
+							<!-- Car List -->
 							<DataGrid x:Name="CarDataGrid"
-								  AutoGenerateColumns="True"
-								  Height="160"
-								  IsReadOnly="True"
-								  CanUserAddRows="False"
-								  CanUserDeleteRows="False"/>
+							  AutoGenerateColumns="False"
+							  Height="160"
+							  IsReadOnly="True"
+							  CanUserAddRows="False"
+							  CanUserDeleteRows="False">
+
+								<DataGrid.Columns>
+									<DataGridTextColumn Header="Make" Binding="{Binding Make}" Width="*" />
+									<DataGridTextColumn Header="Model" Binding="{Binding Model}" Width="*" />
+									<DataGridTextColumn Header="Year" Binding="{Binding Year}" Width="*" />
+									<DataGridTextColumn Header="Horse Power" Binding="{Binding HorsePower}" Width="*" />
+									<DataGridTextColumn Header="Car State" Binding="{Binding CarState}" Width="*" />
+								</DataGrid.Columns>
+							</DataGrid>
 						</StackPanel>
 					</Grid>
 				</TabItem>
