--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -26,7 +26,7 @@
 					<Grid Background="White" Margin="5">
 						<StackPanel Margin="10">
 							<!-- Form to Add Car -->
-							<TextBlock Text="Add New Car" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+							<TextBlock Text="Car List" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
 							<StackPanel Orientation="Horizontal" Margin="0,5">
 								<TextBlock Text="Make:" Width="100" VerticalAlignment="Center"/>
 								<TextBox x:Name="MakeTextBox" Width="300" />
@@ -73,12 +73,39 @@
 
 				<!-- Requests Tab -->
 				<TabItem Header="Requests">
-					<Grid Background="White">
-						<TextBlock Text="Requests functionality not implemented yet."
-                                   HorizontalAlignment="Center" VerticalAlignment="Center"
-                                   FontSize="16" FontWeight="Bold"/>
+					<Grid Background="White" Margin="5">
+						<StackPanel Margin="10">
+							<!-- Title -->
+							<TextBlock Text="Request List" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+
+							<!-- Requests DataGrid -->
+							<DataGrid x:Name="RequestsDataGrid"
+									  AutoGenerateColumns="False"
+									  IsReadOnly="True"
+									  SelectionMode="Single"
+									  Height="300"
+									  CanUserAddRows="False"
+									  CanUserDeleteRows="False"
+									  Margin="0,0,0,10">
+								<DataGrid.Columns>
+									<DataGridTextColumn Header="Request ID" Binding="{Binding Id}" Width="*" />
+									<DataGridTextColumn Header="Car ID" Binding="{Binding CarId}" Width="*" />
+									<DataGridTextColumn Header="User ID" Binding="{Binding UserId}" Width="*" />
+									<DataGridTextColumn Header="Start Date" Binding="{Binding StartDate}" Width="*" />
+									<DataGridTextColumn Header="End Date" Binding="{Binding EndDate}" Width="*" />
+									<DataGridTextColumn Header="Accepted" Binding="{Binding IsAccepted}" Width="*" />
+								</DataGrid.Columns>
+							</DataGrid>
+
+							<!-- Buttons for Actions -->
+							<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+								<Button Content="Accept" Width="100" Margin="5" Click="AcceptRequest_Click"/>
+								<Button Content="Reject" Width="100" Margin="5" Click="RejectRequest_Click"/>
+							</StackPanel>
+						</StackPanel>
 					</Grid>
 				</TabItem>
+
 			</TabControl>
 
 			<!-- Logout Button -->
