--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -87,6 +87,27 @@
 									  CanUserAddRows="False"
 									  CanUserDeleteRows="False"
 									  Margin="0,0,0,10">
+
+								<!-- Define Style for Row Coloring -->
+								<DataGrid.RowStyle>
+									<Style TargetType="DataGridRow">
+										<Style.Triggers>
+											<!-- Trigger for Accepted = true -->
+											<DataTrigger Binding="{Binding IsAccepted}" Value="True">
+												<Setter Property="Background" Value="#DFF0D8"/>
+												<!-- Light green -->
+											</DataTrigger>
+
+											<!-- Trigger for Accepted = false -->
+											<DataTrigger Binding="{Binding IsAccepted}" Value="False">
+												<Setter Property="Background" Value="#F2DEDE"/>
+												<!-- Light red -->
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</DataGrid.RowStyle>
+
+								<!-- Define Columns -->
 								<DataGrid.Columns>
 									<DataGridTextColumn Header="Request ID" Binding="{Binding Id}" Width="*" />
 									<DataGridTextColumn Header="Car ID" Binding="{Binding CarId}" Width="*" />
@@ -96,6 +117,7 @@
 									<DataGridTextColumn Header="Accepted" Binding="{Binding IsAccepted}" Width="*" />
 								</DataGrid.Columns>
 							</DataGrid>
+
 
 							<!-- Buttons for Actions -->
 							<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
