--- a/Views/Employee/EmployeeView.xaml
+++ b/Views/Employee/EmployeeView.xaml
@@ -53,12 +53,40 @@
 
 							<!-- Car List -->
 							<DataGrid x:Name="CarDataGrid"
-							  AutoGenerateColumns="False"
-							  Height="160"
-							  IsReadOnly="True"
-							  CanUserAddRows="False"
-							  CanUserDeleteRows="False">
+									  AutoGenerateColumns="False"
+									  Height="160"
+									  IsReadOnly="True"
+									  CanUserAddRows="False"
+									  CanUserDeleteRows="False">
 
+								<!-- Style to color rows based on CarState -->
+								<DataGrid.RowStyle>
+									<Style TargetType="DataGridRow">
+										<Style.Triggers>
+											<!-- Available -->
+											<DataTrigger Binding="{Binding CarState}" Value="Available">
+												<Setter Property="Background" Value="#DFF0D8"/>
+											</DataTrigger>
+
+											<!-- Rented -->
+											<DataTrigger Binding="{Binding CarState}" Value="Rented">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+
+											<!-- InService -->
+											<DataTrigger Binding="{Binding CarState}" Value="InService">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+
+											<!-- Unavailable -->
+											<DataTrigger Binding="{Binding CarState}" Value="Unavailable">
+												<Setter Property="Background" Value="#D9D9D9"/>
+											</DataTrigger>
+										</Style.Triggers>
+									</Style>
+								</DataGrid.RowStyle>
+
+								<!-- Columns -->
 								<DataGrid.Columns>
 									<DataGridTextColumn Header="Make" Binding="{Binding Make}" Width="*" />
 									<DataGridTextColumn Header="Model" Binding="{Binding Model}" Width="*" />
@@ -95,13 +123,11 @@
 											<!-- Trigger for Accepted = true -->
 											<DataTrigger Binding="{Binding IsAccepted}" Value="True">
 												<Setter Property="Background" Value="#DFF0D8"/>
-												<!-- Light green -->
 											</DataTrigger>
 
 											<!-- Trigger for Accepted = false -->
 											<DataTrigger Binding="{Binding IsAccepted}" Value="False">
-												<Setter Property="Background" Value="#F2DEDE"/>
-												<!-- Light red -->
+												<Setter Property="Background" Value="#D9D9D9"/>
 											</DataTrigger>
 										</Style.Triggers>
 									</Style>
