--- a/Views/Login/LoginView.xaml
+++ b/Views/Login/LoginView.xaml
@@ -48,17 +48,17 @@
 
 			<!-- Navigation to Register -->
 			<TextBlock Text="Do not have an account?"
-                       FontSize="14"
+                       FontSize="16"
                        Foreground="#555"
                        HorizontalAlignment="Center"
                        Margin="0,20,0,5"/>
 
 			<TextBlock Text="Register here"
-                       FontSize="14"
+                       FontSize="16"
                        Foreground="#0078D7"
                        HorizontalAlignment="Center"
                        Cursor="Hand"
-                       TextDecorations="Underline"
+                       TextDecorations="none"
                        MouseLeftButtonUp="SwitchToRegisterView" />
 		</StackPanel>
 	</Grid>
