--- a/Views/Register/RegisterView.xaml
+++ b/Views/Register/RegisterView.xaml
@@ -70,17 +70,17 @@
 
 			<!-- Back to Login Section -->
 			<TextBlock Text="Already have an account?"
-                        FontSize="14"
+                        FontSize="16"
                         Foreground="#555"
                         HorizontalAlignment="Center"
                         Margin="0,20,0,5"/>
 
 			<TextBlock Text="Back to Login"
-                        FontSize="14"
+                        FontSize="16"
                         Foreground="#0078D7"
                         HorizontalAlignment="Center"
                         Cursor="Hand"
-                        TextDecorations="Underline"
+                        TextDecorations="none"
                         MouseLeftButtonUp="SwitchToLoginView" />
 		</StackPanel>
 	</Grid>
