--- a/Views/Admin/AdminView.xaml
+++ b/Views/Admin/AdminView.xaml
@@ -1,11 +1,11 @@
-<UserControl x:Class="CarRentApp.Views.Customer.CustomerView"
+<UserControl x:Class="CarRentApp.Views.Admin.AdminView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="600">
 
             <!-- Panel Title -->
-            <TextBlock Text="Customer Panel"
+            <TextBlock Text="Admin Panel"
                        FontSize="32"
                        FontWeight="Bold"
                        Foreground="#333"
@@ -17,20 +17,19 @@
                        FontSize="18"
                        Foreground="#555"
                        HorizontalAlignment="Center"
-                       TextAlignment="Center"
                        Margin="0,0,0,20" />
 
             <!-- Logout Button -->
-			<Button Content="Logout"
-                    Height="40"
-                    Width="200"
-                    Background="#0078D7"
-                    Foreground="White"
-                    FontWeight="Bold"
-                    BorderThickness="0"
-                    Margin="20,20,0,0"
-                    HorizontalAlignment="Center"
-                    Click="Logout_Click"/>
+            <Button Content="Logout"
+                Height="40"
+                Width="200"
+                Background="#0078D7"
+                Foreground="White"
+                FontWeight="Bold"
+                BorderThickness="0"
+                Margin="20,20,0,0"
+                HorizontalAlignment="Center"
+                Click="Logout_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
