--- a/Views/Mechanic/MechanicView.xaml
+++ b/Views/Mechanic/MechanicView.xaml
@@ -19,16 +19,17 @@
                        HorizontalAlignment="Center"
                        Margin="0,0,0,20" />
 
-            <!-- Logout Button -->
-            <Button Content="Logout"
-                    Width="200"
+			<!-- Logout Button -->
+			<Button Content="Logout"
                     Height="40"
+                    Width="200"
                     Background="#0078D7"
                     Foreground="White"
                     FontWeight="Bold"
                     BorderThickness="0"
-                    Click="Logout_Click"
-                    HorizontalAlignment="Center"/>
+                    Margin="20,20,0,0"
+                    HorizontalAlignment="Center"
+                    Click="Logout_Click"/>
         </StackPanel>
     </Grid>
 </UserControl>
