--- a/Views/Auth/Login/LoginView.xaml
+++ b/Views/Auth/Login/LoginView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CarRentApp.Views.Login.LoginView"
+<UserControl x:Class="CarRentApp.Views.Auth.Login.LoginView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Grid Background="#F3F4F6">
