--- a/Views/Auth/Register/RegisterView.xaml
+++ b/Views/Auth/Register/RegisterView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CarRentApp.Views.Register.RegisterView"
+<UserControl x:Class="CarRentApp.Views.Auth.Register.RegisterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<Grid Background="#F3F4F6">
