--- a/Views/Users/Admin/AdminView.xaml
+++ b/Views/Users/Admin/AdminView.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="CarRentApp.Views.Admin.AdminView"
+<UserControl x:Class="CarRentApp.Views.Users.Admin.AdminView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid Background="#F3F4F6">
