--- a/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
+++ b/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
@@ -1,36 +1,88 @@
 <UserControl x:Class="CarRentApp.Views.Users.Customer.CustomerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Grid Background="#F3F4F6">
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="400">
+	<!-- The main layout container -->
+	<DockPanel>
+		<!-- Navigation Bar -->
+		<Grid DockPanel.Dock="Top" Background="#0078D7" Height="50">
+			<!-- Define two columns: Left for the title, Right for the logout button -->
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+				<!-- Left column: takes all available space -->
+				<ColumnDefinition Width="Auto" />
+				<!-- Right column: adjusts to content -->
+			</Grid.ColumnDefinitions>
 
-            <!-- Panel Title -->
-            <TextBlock Text="Customer Panel"
-                       FontSize="32"
+			<!-- Title aligned to the left -->
+			<TextBlock Text="CarRent"
+                       Foreground="White"
+                       FontSize="20"
                        FontWeight="Bold"
-                       Foreground="#333"
-                       HorizontalAlignment="Center"
-                       Margin="0,0,0,20" />
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Left"
+                       Margin="10,0,0,0"
+                       Grid.Column="0"/>
 
-            <!-- User Info -->
-            <TextBlock x:Name="UserInfoTextBlock"
-                       FontSize="18"
-                       Foreground="#555"
-                       HorizontalAlignment="Center"
-                       TextAlignment="Center"
-                       Margin="0,0,0,20" />
-
-            <!-- Logout Button -->
+			<!-- Logout button aligned to the right -->
 			<Button Content="Logout"
-                    Height="40"
-                    Width="200"
-                    Background="#0078D7"
-                    Foreground="White"
+                    Width="100"
+                    Height="30"
+                    Background="White"
+                    Foreground="#0078D7"
                     FontWeight="Bold"
-                    BorderThickness="0"
-                    Margin="20,20,0,0"
-                    HorizontalAlignment="Center"
-                    Click="Logout_Click"/>
-        </StackPanel>
-    </Grid>
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right"
+                    Margin="0,0,10,0"
+                    Click="Logout_Click"
+                    Grid.Column="1"/>
+		</Grid>
+
+		<!-- Main content area -->
+		<Grid Background="#F3F4F6">
+			<!-- View showing the list of cars -->
+			<Grid x:Name="MainView" Visibility="Visible">
+				<StackPanel VerticalAlignment="Top" Margin="20" Width="1200" HorizontalAlignment="Center">
+					<!-- User Info -->
+					<TextBlock x:Name="UserInfoTextBlock"
+                               FontSize="18"
+                               Foreground="#555"
+                               HorizontalAlignment="Center"
+                               TextAlignment="Center"
+                               Margin="0,10,0,20" />
+
+					<!-- Car list displayed as cards -->
+					<ScrollViewer Height="600">
+						<UniformGrid x:Name="CarsGrid" Columns="4" Margin="10">
+							<!-- Cars will be dynamically populated -->
+						</UniformGrid>
+					</ScrollViewer>
+				</StackPanel>
+			</Grid>
+
+			<!-- View showing car details -->
+			<Grid x:Name="CarDetailView" Visibility="Collapsed">
+				<!-- Back button -->
+				<Button Content="Back"
+                        HorizontalAlignment="Left"
+                        Margin="10"
+                        Width="100"
+                        Click="BackToMainView_Click" />
+
+				<!-- Car detail information -->
+				<StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+					<TextBlock x:Name="CarDetailTitle"
+                               FontSize="28"
+                               FontWeight="Bold"
+                               Foreground="#333"
+                               HorizontalAlignment="Center"
+                               Margin="0,0,0,20"/>
+					<TextBlock x:Name="CarDetailDescription"
+                               FontSize="18"
+                               Foreground="#555"
+                               TextAlignment="Center"
+                               Margin="0,10"/>
+				</StackPanel>
+			</Grid>
+		</Grid>
+	</DockPanel>
 </UserControl>
