--- a/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
+++ b/CarRentApp/Src/Views/Users/Customer/CustomerView.xaml
@@ -59,7 +59,7 @@
                             
                             <!-- Buttons for Actions -->
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <Button Content="Accept" Width="100" Margin="5" Click="RentRequest_Click"/>
+                                <Button Content="Rent" Width="100" Margin="5" Click="RentRequest_Click"/>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
@@ -79,11 +79,11 @@
                                       RowBackground="#DFF0D8">
                                 
                                 <DataGrid.Columns>
-                                    <DataGridTextColumn Header="Request ID" Binding="{Binding Id}" Width="*" />
-                                    <DataGridTextColumn Header="Car ID" Binding="{Binding CarId}" Width="*" />
+                                    <DataGridTextColumn Header="Car Make" Binding="{Binding CarMake}" Width="*" />
+                                    <DataGridTextColumn Header="Car Model" Binding="{Binding CarModel}" Width="*" />
+                                    <DataGridTextColumn Header="Car Year" Binding="{Binding CarYear}" Width="*" />
                                     <DataGridTextColumn Header="Start Date" Binding="{Binding StartDate}" Width="*" />
                                     <DataGridTextColumn Header="End Date" Binding="{Binding EndDate}" Width="*" />
-                                    <DataGridTextColumn Header="Accepted" Binding="{Binding IsAccepted}" Width="*"/>
                                 </DataGrid.Columns>
                             </DataGrid>
                         </StackPanel>
