--- a/CarRentApp/Src/Views/Users/Admin/AdminView.xaml
+++ b/CarRentApp/Src/Views/Users/Admin/AdminView.xaml
@@ -41,10 +41,11 @@
                             <TextBlock Text="Role:" Width="100" VerticalAlignment="Center"/>
                             <ComboBox x:Name="RoleComboBox" Width="300" SelectedIndex="0" />
                         </StackPanel>
-                        <Button Content="Add User" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
-        Click="AddUser_Click"/>
-                        <Button Content="Refresh" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left"
-Click="Refresh_Click"/>
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
+                        <Button Content="Add User" Width="120" Height="30" Margin="0,10" HorizontalAlignment="Left" Click="AddUser_Click"/>
+                            <Button Content="Refresh" Width="120" Height="30" Margin="5,10" HorizontalAlignment="Left" Click="Refresh_Click"/>
+                        </StackPanel>
                         <DataGrid x:Name="UserDataGrid"
 								  AutoGenerateColumns="False"
 								  Height="160"
